--- a/src/style/Content.module.css
+++ b/src/style/Content.module.css
@@ -1,11 +1,11 @@
 .main{
-    overflow-y: auto;
+    /* overflow-y: auto;    */
     margin-left: 30px;
     margin-right: 20px;
     /* background-color : violet; */
     display: grid;
     height: 100%;
-    grid-template-rows: 200px 200px 200px 200px 200px;
+    grid-template-rows: 200px 200px 500px 200px 200px 200px ;
     row-gap: 10px;
     padding-top: 65px;
 }
@@ -19,4 +19,30 @@
 display: grid;
 grid-template-columns: 4fr 4fr 4fr 4fr;
 column-gap: 5px;
+}
+.main .slides{
+    margin-top: 10px;
+}
+.main .p1 .text1 .tt1{
+    font-size: 20px;
+    font-weight: bold;
+}
+.main .p1 .text1 .tt2{
+    color: gray;
+}
+
+.main .p2 .text2 .tt1{
+    font-size: 20px;
+    font-weight: bold;
+}
+.main .p2 .text2 .tt2{
+    color: gray;
+}
+
+.main .p3 .text3 .tt1{
+    font-size: 20px;
+    font-weight: bold;
+}
+.main .p3 .text3 .tt2{
+    color: gray;
 }
