--- a/src/style/App.css
+++ b/src/style/App.css
@@ -109,3 +109,43 @@ margin-left: 10px;
     margin-right: 5px;
 }
 
+.slider{
+    margin-top:40px ;
+     position: relative;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+.simg{
+    border-radius: 10px;
+    width: 800px;
+}
+.right-arrow{
+    position: absolute;
+    top:45%;
+    right:100px;
+    font-size: 3rem;
+    z-index: 10;
+    cursor: pointer;
+   user-select: none;
+}
+.left-arrow{
+    position: absolute;
+    top:45%;
+    left:100px;
+    font-size: 3rem;
+    z-index: 10;
+    cursor: pointer;
+   user-select: none;
+}
+
+.slide{
+    opacity: 0;
+    transition-duration: 1s ease;
+}
+
+.slide.active{
+    opacity: 1;
+    transition-duration: 1s;
+    transform: scale(1.08);
+}
