--- a/src/style/App.css
+++ b/src/style/App.css
@@ -110,11 +110,12 @@ margin-left: 10px;
 }
 
 .slider{
+    position: relative;
     margin-top:40px ;
-     position: relative;
     display: flex;
     justify-content: center;
     align-content: center;
+    z-index: 10;
 }
 .simg{
     border-radius: 10px;
@@ -123,15 +124,15 @@ margin-left: 10px;
 .right-arrow{
     position: absolute;
     top:45%;
-    right:100px;
+    right:70px;
     font-size: 3rem;
     z-index: 10;
     cursor: pointer;
    user-select: none;
 }
 .left-arrow{
-    position: absolute;
-    top:45%;
+position:absolute ;   
+ top:45%;
     left:100px;
     font-size: 3rem;
     z-index: 10;
@@ -148,4 +149,7 @@ margin-left: 10px;
     opacity: 1;
     transition-duration: 1s;
     transform: scale(1.08);
+}
+.breakcont{
+    display: flex;
 }
