--- a/src/style/App.css
+++ b/src/style/App.css
@@ -11,12 +11,17 @@
     display: flex;
     height:65px;
     background-color: rgb(255,225,65);
+    z-index: 1;
 }
 .headbar .icon{
     width:120px;
-    height: 100%;
+    height: 85%;
     margin-left: 20px;
     margin-top: 8px;
+    cursor: pointer;
+}
+.headbar .icon:hover{
+    background-color:  rgba(145, 126, 23, 0.397);   
 }
 .icon img{
     height:60%;
@@ -27,6 +32,7 @@
 width:300px;
 display: flex;
 align-items: center;
+cursor: pointer;
 }
 .headbar .address .aicon{
 width: 40px;
@@ -77,17 +83,27 @@ margin-left: 10px;
     align-items: center;
     justify-content: center;
     width:100px;
+    cursor: pointer;
     
 }
+.headbar .category:hover{
+    background-color:  rgba(145, 126, 23, 0.397);
+}
 .headbar .login{
-    
+    cursor: pointer;
     font-size: 17px;
     display: flex;
     align-items: center;
     justify-content: center;
     width:80px;
+    height: 100%;
+    color: black;
+}
+.headbar .login:hover{
+    background-color:  rgba(145, 126, 23, 0.397);
 }
 .headbar .my-cart{
+    
     width:140px;
     font-size: 17px;
     display: flex;
@@ -97,6 +113,7 @@ margin-left: 10px;
 }
 
 .headbar .my-cart button{
+    cursor: pointer;
     width: 100px;
     height: 35px;
     color: white;
@@ -115,7 +132,6 @@ margin-left: 10px;
     display: flex;
     justify-content: center;
     align-content: center;
-    z-index: 10;
 }
 .simg{
     border-radius: 10px;
@@ -126,7 +142,6 @@ margin-left: 10px;
     top:45%;
     right:70px;
     font-size: 3rem;
-    z-index: 10;
     cursor: pointer;
    user-select: none;
 }
@@ -135,7 +150,6 @@ position:absolute ;
  top:45%;
     left:100px;
     font-size: 3rem;
-    z-index: 10;
     cursor: pointer;
    user-select: none;
 }
@@ -151,5 +165,11 @@ position:absolute ;
     transform: scale(1.08);
 }
 .breakcont{
+    display: flex;
+}
+.Fruitcont{
+    display: flex;
+}
+.Madicalcont{
     display: flex;
 }
